--- a/include/install
+++ b/include/install
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # By Rainman
-# V20222902
+# V20220303
 # 0.3.2.2
 
 # create directories, ruled by configuration
@@ -10,14 +10,14 @@ if [ ! -d /usr/local/bin/include ] &>/dev/null; then
 fi
 
 if [[ ! -f /usr/local/bin/include/color ]] &>/dev/null; then
-  cp /home/"$(whoami)"/pi-node/include/color /tmp/color.tmp 2>/dev/null
+  cp /home/"$(whoami)"/pi-node/include/color /tmp/color.tmp &>/dev/null
   sudo mv /tmp/color.tmp /usr/local/bin/include/color 2>/dev/null
 fi
 source /usr/local/bin/include/color 2>&1
 
 if [[ ! -f /usr/local/bin/include/pinode.conf ]] &>/dev/null; then
-  cp /home/"$(whoami)"/pi-node/pinode.conf /tmp/pinode.conf.tmp 2>/dev/null
-  sudo mv /tmp/pinode.conf.tmp /usr/local/bin/include/pinode.conf 2>/dev/null
+  cp /home/"$(whoami)"/pi-node/pinode.conf /tmp/pinode.conf.tmp &>/dev/null
+  sudo mv /tmp/pinode.conf.tmp /usr/local/bin/include/pinode.conf &>/dev/null
   printf '%b' "[${R1:?}!!${N0:?}] Please edit pinode.conf before going any further! (fresh install)\n"
   read -r -p "[Ok] Press Enter to edit pinode.conf!" </dev/tty
   clear
@@ -273,10 +273,10 @@ if cat "${LOG_DIR:?}"/node_data/stats/screens 2>/dev/null | grep -q "add_peers" 
   screen -X -S add_peers quit &>/dev/null
 fi
 
-sudo cp -R /home/"$(whoami)"/pi-node/include/* /usr/local/bin/include/ 2>&1
-sudo cp -R /home/"$(whoami)"/pi-node/pinode /usr/local/bin/ 2>&1
-sudo cp -R /home/"$(whoami)"/pi-node/include/update /usr/local/bin/ 2>&1
-sudo cp -R /home/"$(whoami)"/pi-node/include/menu /usr/local/bin/ 2>&1
+sudo cp -R /home/"$(whoami)"/pi-node/include/* /usr/local/bin/include/ &>/dev/null
+sudo cp -R /home/"$(whoami)"/pi-node/pinode /usr/local/bin/ &>/dev/null
+sudo cp -R /home/"$(whoami)"/pi-node/include/update /usr/local/bin/ &>/dev/null
+sudo cp -R /home/"$(whoami)"/pi-node/include/menu /usr/local/bin/ &>/dev/null
 
 sudo chmod +x /usr/local/bin/pinode 2>&1
 sudo chmod +x /usr/local/bin/update 2>&1
