--- a/include/install
+++ b/include/install
@@ -284,7 +284,7 @@ sudo chmod +x /usr/local/bin/menu 2>&1
 
 rm "${LOG_DIR:?}"/add_peers &>/dev/null
 
-sudo chown -R "$(whoami)":"$(whoami)" /usr/local/bin/pinode /usr/local/bin/update /usr/local/bin/include /usr/local/bin/include/* 2>&1
+sudo chown -R "$(whoami)":"$(whoami)" /usr/local/bin/pinode /usr/local/bin/menu /usr/local/bin/update /usr/local/bin/include /usr/local/bin/include/* 2>&1
 sudo chown -R "$(whoami)":"$(whoami)" "${LOG_DIR:?}"/node_data 2>&1
 
 cd /home/"$(whoami)"/pi-node || exit && git log -1 --format="%at" | xargs -I{} date -d @{} '+%Y/%m/%d %H:%M:%S' >"${LOG_DIR:?}"/node_data/repo 2>&1
