--- a/include/install
+++ b/include/install
@@ -174,7 +174,6 @@ sudo chown -R "$(whoami)":"$(whoami)" "${LOG_DIR:?}"/node_data 2>&1
 
 LATEST_DATE=$(head -1 "${LOG_DIR:?}"/node_data/repo 2>&1)
 LATEST_HEAD=$(tail -1 "${LOG_DIR:?}"/node_data/repo 2>&1)
-
 OLD_HEAD=$(grep "Update.Script" "${WALLET_LOG_DIR:?}"/debug.log 2>/dev/null | awk '{ print $7 }' 2>&1 | tail -1 2>&1 | sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" 2>&1)
 
 if [[ -z "$OLD_HEAD" ]] &>/dev/null; then
@@ -192,6 +191,7 @@ printf '%b' "${LOG_DATE:?} Status() Update.Script: Updating! ${GR:?}${OLD_HEAD:?
 ls -lSh /usr/local/bin/include/pinode 2>&1
 ls -lSh /usr/local/bin/include/ 2>&1
 ls -lSh /usr/local/bin/ 2>&1 | egrep -o ".* pinode|.* update|total [0-9]+[Aa-Zz]+" 2>/dev/null
+rm "${LOG_DIR:?}"/node_data/wallet/data/screens &>/dev/null
 rm "${LOG_DIR:?}"/read_* &>/dev/null
 rm "${LOG_DIR:?}"/add_* &>/dev/null
 killall screen &>/dev/null
