--- a/include/install
+++ b/include/install
@@ -2,7 +2,7 @@
 
 # By Rainman
 # V20222908
-# 0.2.3.4
+# 0.2.7.1
 
 # create script directories
 sudo mkdir /usr/local/bin/include &>/dev/null
@@ -32,6 +32,43 @@ source /usr/local/bin/include/pinode/color 2>&1
 
 LC_ALL=de_US.utf8 date '+%Y-%m-%dT%TZ' >"${LOG_DIR:?}"/node_data/system/date 2>&1
 LOG_DATE=$(cat "${LOG_DIR:?}"/node_data/system/date 2>/dev/null)
+
+if [[ ! -f "${DATA_DIR:?}"/"$(echo "${WALLET_NAME:?}" 2>&1 | tr '[:upper:]' '[:lower:]' 2>&1)".conf ]] &>/dev/null; then
+  echo "
+## freedomcoin.conf configuration file.
+# Network-related settings:
+
+# Run on the test network instead of the real freedomcoin network.
+#testnet=1
+
+# RPC credentials
+rpcuser=$(tr -dc 'a-z' </dev/urandom 2>&1 | head -c 8 2>&1 | rev 2>&1)
+rpcpassword=$(tr -dc 'a-z' </dev/urandom 2>&1 | head -c 8 2>&1 | rev 2>&1)
+rpcallowip=127.0.0.1
+rpcbind=127.0.0.1
+
+# Connect via a SOCKS5 proxy (default: 127.0.0.1:9050)
+proxy=127.0.0.1:9050
+
+# Use separate SOCKS5 proxy to reach peers via Tor hidden services (default: -proxy)
+onion=127.0.0.1:9050
+
+# Tor control port to use if onion listening enabled (default: 127.0.0.1:9051)
+torcontrol=127.0.0.1:9051
+
+# Tor onion externalip
+#externalip=PLEASE_EDIT
+
+# Listening mode, enabled by default except when 'connect' is being used
+listen=1
+discover=1
+
+# Maximum number of inbound+outbound connections. (default: 125)
+maxconnections=125
+
+# can be commented out if you use the service script
+daemon=1" >"${DATA_DIR:?}"/"$(echo "${WALLET_NAME:?}" 2>&1 | tr '[:upper:]' '[:lower:]' 2>&1)".conf
+fi
 
 clear
 
