--- a/include/install
+++ b/include/install
@@ -228,6 +228,12 @@ if ! [ -x "$(command -v torsocks)" ] &>/dev/null; then
   sudo apt-get install torsocks -y
 fi
 
+# make sure jq is installed
+if ! [ -x "$(command -v jq)" ] &>/dev/null; then
+  echo "Installing jq"
+  sudo apt-get install jq -y
+fi
+
 # make sure tor is installed
 if ! [ -x "$(command -v tor)" ] &>/dev/null; then
   echo "Installing tor (proxy)"
