--- a/include/install
+++ b/include/install
@@ -35,11 +35,12 @@ source /usr/local/bin/include/pinode/color 2>/dev/null
 if [[ ! -f "${DATA_DIR:?}"/wallet_port ]] &>/dev/null; then
   printf '%b' "[??] Enter Wallet Port ${G1:?}> ${N0:?}"
   read -r WALLET_PORT
-  echo "${WALLET_PORT:?}" >"${DATA_DIR:?}"/wallet_port 2>&1
   if [[ -z "$WALLET_PORT" ]] &>/dev/null; then
     echo "Using default port 15110"
     echo "15110" >"${DATA_DIR:?}"/wallet_port 2>&1
     sleep 1
+  else
+    echo "${WALLET_PORT:?}" >"${DATA_DIR:?}"/wallet_port 2>&1
   fi
 fi
 
@@ -47,11 +48,12 @@ fi
 if [[ ! -f "${DATA_DIR:?}"/masternode_collateral ]] &>/dev/null; then
   printf '%b' "[??] Enter Masternode Collateral ${G1:?}> ${N0:?}"
   read -r WALLET_COLLATERAL
-  echo "${WALLET_COLLATERAL:?}" >"${DATA_DIR:?}"/masternode_collateral 2>&1
   if [[ -z "$WALLET_COLLATERAL" ]] &>/dev/null; then
     echo "Using default Collateral"
     echo "10000" >"${DATA_DIR:?}"/masternode_collateral 2>&1
     sleep 1
+  else
+    echo "${WALLET_COLLATERAL:?}" >"${DATA_DIR:?}"/masternode_collateral 2>&1
   fi
 fi
 
