--- a/include/install
+++ b/include/install
@@ -49,7 +49,7 @@ if [[ ! -f "${DATA_DIR:?}"/masternode_collateral ]] &>/dev/null; then
   printf '%b' "[??] Enter Masternode Collateral ${G1:?}> ${N0:?}"
   read -r WALLET_COLLATERAL
   if [[ -z "$WALLET_COLLATERAL" ]] &>/dev/null; then
-    echo "Using default Collateral"
+    echo "Using default Collateral 10000"
     echo "10000" >"${DATA_DIR:?}"/masternode_collateral 2>&1
     sleep 1
   else
