--- a/include/install
+++ b/include/install
@@ -95,17 +95,16 @@ find_daemon() {
       echo "WALLET_DAEMON=$DAE_FOUND" >>/etc/pinode/config
     fi
   else
-    # if configuration found
-    printf '%b' "[${G1}OK${N0}] Config  : Found ${CY}Daemon${N0} in configuration!\n"
     # daemon found
     DAE_FOUND="$(grep "WALLET_DAEMON=" /etc/pinode/config | awk -F= '{ print $2 }')"
     # pidof daemon
     DAE_PID="$(pidof "$(echo "$DAE_FOUND" | awk -F/ '{ print $NF }')")"
     # active daemon
     if [[ -n "$DAE_PID" ]] &>/dev/null; then
-      DAE_ACTIVE="Running PID: $DAE_PID"
+      DAE_ACTIVE="PID: $DAE_PID"
     fi
-    printf '%b' "[${G1}OK${N0}] Daemon  : ${DAE_FOUND} $DAE_ACTIVE\n"
+    # if configuration found
+    printf '%b' "[${G1}OK${N0}] Config  : Found ${CY}Daemon${N0} in configuration! $DAE_ACTIVE\n"
   fi
 }
 
@@ -125,17 +124,16 @@ find_client() {
       echo "WALLET_CLIENT=$CLI_FOUND" >>/etc/pinode/config
     fi
   else
-    # if configuration found
-    printf '%b' "[${G1}OK${N0}] Config  : Found ${CY}Client${N0} in configuration!\n"
     # configuration client found
     CLI_FOUND="$(grep "WALLET_CLIENT=" /etc/pinode/config | awk -F= '{ print $2 }')"
     # pidof client
     CLI_PID="$(pidof "$(echo "$CLI_FOUND" | awk -F/ '{ print $NF }')")"
     # active client
     if [[ -n "$CLI_PID" ]] &>/dev/null; then
-      CLI_ACTIVE="Running PID: $CLI_PID"
+      CLI_ACTIVE="PID: $CLI_PID"
     fi
-    printf '%b' "[${G1}OK${N0}] Client  : ${CLI_FOUND} $CLI_ACTIVE\n"
+    # if configuration found
+    printf '%b' "[${G1}OK${N0}] Config  : Found ${CY}$CLI_FOUND${N0} in configuration! $CLI_ACTIVE\n"
   fi
 }
 
@@ -155,11 +153,10 @@ find_wallet() {
       echo "WALLET_DAT=$DAT_FOUND" >>/etc/pinode/config
     fi
   else
-    # if configuration found
-    printf '%b' "[${G1}OK${N0}] Config  : Found ${CY}Private Key${N0} in configuration!\n"
     # configuration client found
     DAT_FOUND="$(grep "WALLET_DAT=" /etc/pinode/config | awk -F= '{ print $2 }')"
-    printf '%b' "[${G1}OK${N0}] Wallet  : ${DAT_FOUND}\n"
+    # if configuration found
+    printf '%b' "[${G1}OK${N0}] Config  : Found ${CY}$DAT_FOUND${N0} in configuration!\n"
   fi
 }
 
